// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders link button correctly 1`] = `
<a
  className="bxsgwy"
  href="/"
  rel={undefined}
  size="regular"
>
  Dummy Label
</a>
`;

exports[`<Button /> renders outline large size button correctly 1`] = `
<button
  className="dSRBVy"
  size="large"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders outline regular size button correctly 1`] = `
<button
  className="fZANJS"
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders outline regular size disabled button correctly 1`] = `
<button
  className="fZANJS"
  disabled={true}
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders outline small size button correctly 1`] = `
<button
  className="hytSzx"
  size="small"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders special large size button correctly 1`] = `
<button
  className="kYlOcU"
  size="large"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders special regular size button correctly 1`] = `
<button
  className="hClayG"
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders special regular size disabled button correctly 1`] = `
<button
  className="hClayG"
  disabled={true}
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders special small size button correctly 1`] = `
<button
  className="bgGsnj"
  size="small"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard large size button correctly 1`] = `
<button
  className="iafmgw"
  size="large"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard regular size button correctly 1`] = `
<button
  className="jDSxdZ"
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard regular size disabled button correctly 1`] = `
<button
  className="jDSxdZ"
  disabled={true}
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard small size button correctly 1`] = `
<button
  className="geITcv"
  size="small"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders transparent large size button correctly 1`] = `
<button
  className="irikcu"
  size="large"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders transparent regular size button correctly 1`] = `
<button
  className="dTVfim"
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders transparent regular size disabled button correctly 1`] = `
<button
  className="dTVfim"
  disabled={true}
  size="regular"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders transparent small size button correctly 1`] = `
<button
  className="cBUZry"
  size="small"
>
  Dummy Label
</button>
`;
